# msal_streamlit_authentication

./: .gitignore  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_and_release.yml
example/local/: README.md  pyproject.toml
example/local/app/: dashboard.py
msal_streamlit_auth/frontend/: package-lock.json  package.json
msal_streamlit_auth/frontend/src/: Authentication.tsx
msal_streamlit_auth/frontend/src/auth/: msal-auth.tsx
msal_streamlit_authentication/frontend/: package-lock.json  package.json
msal_streamlit_authentication/frontend/src/: Authentication.tsx
